@@ -3,7 +3,6 @@ package no.nav.arbeidsgiver.kandidat.kandidatsok.es;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import no.nav.arbeidsgiver.kandidat.kandidatsok.domene.es.EsCvObjectMother;
 import no.nav.arbeidsgiver.kandidat.kandidatsok.domene.es.KandidatsokTransformer;
-import no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv;
 import no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.*;
 import no.nav.arbeidsgiver.kandidat.kandidatsok.testsupport.ElasticSearchIntegrationTestExtension;
 import no.nav.arbeidsgiver.kandidat.kandidatsok.testsupport.ElasticSearchTestConfiguration;
@@ -18,40 +17,69 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
 import java.io.InputStreamReader;
+import java.time.Instant;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static java.nio.charset.StandardCharsets.ISO_8859_1;
+import static java.time.Instant.now;
 import static java.util.Arrays.asList;
+import static java.util.Collections.emptyList;
+import static java.util.stream.Collectors.toList;
+import static no.nav.arbeidsgiver.kandidat.kandidatsok.KatKode.Kat1_Kode;
+import static no.nav.arbeidsgiver.kandidat.kandidatsok.Kvalifiseringsgruppekode.ibatt;
+import static no.nav.arbeidsgiver.kandidat.kandidatsok.Kvalifiseringsgruppekode.ikval;
+import static no.nav.arbeidsgiver.kandidat.kandidatsok.Stillingstittel.anleggsmaskinfører;
+import static no.nav.arbeidsgiver.kandidat.kandidatsok.Tilgjengelighet.*;
+import static no.nav.arbeidsgiver.kandidat.kandidatsok.domene.es.EsCvObjectMother.antallDagerTilbakeFraNow;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @ExtendWith(ElasticSearchIntegrationTestExtension.class)
 public class IndexCvIT {
 
-    private EsSokService sokClient = ElasticSearchTestConfiguration.esSokService(ElasticSearchTestConfiguration.DEFAULT_INDEX_NAME);
 
-    private EsIndexerService indexerClient = ElasticSearchTestConfiguration.indexerCvService();
+    private final EsSokService sokClient = ElasticSearchTestConfiguration.esSokService(ElasticSearchTestConfiguration.DEFAULT_INDEX_NAME);
 
-    private ObjectMapper objectMapper = ElasticSearchTestConfiguration.objectMapper();
+    private final EsIndexerService indexerClient = ElasticSearchTestConfiguration.indexerCvService();
 
-    private KandidatsokTransformer kandidatsokTransformer = new KandidatsokTransformer();
+    private final ObjectMapper objectMapper = ElasticSearchTestConfiguration.objectMapper();
+
+    private final KandidatsokTransformer kandidatsokTransformer = new KandidatsokTransformer();
+
+    private static final List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv> setupCver = List.of(
+            EsCvObjectMother.giveMeEsCv(),
+            EsCvObjectMother.giveMeEsCv2(),
+            EsCvObjectMother.giveMeEsCv3(),
+            EsCvObjectMother.giveMeEsCv4(),
+            EsCvObjectMother.giveMeEsCv5(),
+            EsCvObjectMother.giveMeEsCv6(),
+            EsCvObjectMother.giveMeCvForDoedPerson(),
+            EsCvObjectMother.giveMeCvForKode6(),
+            EsCvObjectMother.giveMeCvForKode7(),
+            EsCvObjectMother.giveMeCvFritattForAgKandidatsok(),
+            EsCvObjectMother.giveMeCvFritattForKandidatsok()
+    );
+
+    private static final List<String> setupKandidatnumre = setupCver.stream().map(no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv::getKandidatnr).collect(toList());
+
+    private static List<String> kandidatnumre(List<EsCv> cver) {
+        return cver.stream().map(EsCv::getKandidatnr).collect(toList());
+    }
+
+    /**
+     * @return Map hvor nøkkel er CV-ens kandidatdnummer og verdi er innholdet i CV-ens property tilrettelggigngsbehov.
+     */
+    private Map<String, List<String>> tilretteleggingsbehov(List<EsCv> cver) {
+        return cver.stream().collect(Collectors.toMap(EsCv::getKandidatnr, EsCv::getVeilTilretteleggingsbehov));
+    }
+
 
     @BeforeEach
     public void before() {
         indexerClient.createIndex(ElasticSearchTestConfiguration.DEFAULT_INDEX_NAME);
-
-        indexerClient.bulkIndex(List.of(
-                EsCvObjectMother.giveMeEsCv(),
-                EsCvObjectMother.giveMeEsCv2(),
-                EsCvObjectMother.giveMeEsCv3(),
-                EsCvObjectMother.giveMeEsCv4(),
-                EsCvObjectMother.giveMeEsCv5(),
-                EsCvObjectMother.giveMeEsCv6(),
-                EsCvObjectMother.giveMeCvForDoedPerson(),
-                EsCvObjectMother.giveMeCvForKode6(),
-                EsCvObjectMother.giveMeCvForKode7(),
-                EsCvObjectMother.giveMeCvFritattForAgKandidatsok(),
-                EsCvObjectMother.giveMeCvFritattForKandidatsok()
-        ), ElasticSearchTestConfiguration.DEFAULT_INDEX_NAME);
+        indexerClient.bulkIndex(setupCver, ElasticSearchTestConfiguration.DEFAULT_INDEX_NAME);
     }
 
     @AfterEach
@@ -61,16 +89,16 @@ public class IndexCvIT {
 
     @Test
     public void skalIkkeFeileMedIllegalArgumentFraES() throws Exception {
-        EsCv cv1 = objectMapper.readValue(
+        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv cv1 = objectMapper.readValue(
                 new InputStreamReader(getClass().getResourceAsStream("/utfordrende_cv1.json"),
-                        "ISO-8859-1"),
-                EsCv.class);
-        EsCv cv2 = objectMapper.readValue(
+                        ISO_8859_1),
+                no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv.class);
+        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv cv2 = objectMapper.readValue(
                 new InputStreamReader(getClass().getResourceAsStream("/utfordrende_cv2.json"),
-                        "ISO-8859-1"),
-                EsCv.class);
+                        ISO_8859_1),
+                no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv.class);
 
-        List<EsCv> bulkEventer = asList(cv1, cv2);
+        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv> bulkEventer = asList(cv1, cv2);
 
         int antallIndeksert = indexerClient.bulkIndex(bulkEventer, ElasticSearchTestConfiguration.DEFAULT_INDEX_NAME);
         assertThat(antallIndeksert).isEqualTo(bulkEventer.size());
@@ -79,7 +107,7 @@ public class IndexCvIT {
     @Test
     @Disabled("Brukes til utforskende testing")
     public void skalLoggeFeilVedBulkIndeksereCVMedNullfelter() {
-        List<EsCv> bulkEventer =
+        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv> bulkEventer =
                 asList(EsCvObjectMother.giveMeEsCv(), EsCvObjectMother.giveMeEsCvMedFeil(),
                         EsCvObjectMother.giveMeEsCv2());
 
@@ -88,40 +116,24 @@ public class IndexCvIT {
     }
 
     @Test
-    public void testUtenSokekriterierReturnererAlleTestPersonerForArbeidsgivere() {
-        Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().bygg());
+    public void testUtenSokekriterierReturnererAlleCver() {
+        List<EsCv> actualCver = sokClient.veilederSok(SokekriterierVeiledere.med().bygg()).getCver();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-
-        assertThat(cver.size()).isEqualTo(6);
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder(
-                "6L", "5L", "4L", "3L", "2L", "1L");
-    }
-
-    @Test
-    public void testUtenSokekriterierReturnererIkkeJobbsForVeiledere() {
-        Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().bygg());
-
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-
-        assertThat(cver.size()).isEqualTo(6);
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder(
-                "11L", "6L", "5L", "4L", "3L", "2L");
+        assertThat(actualCver.size()).isEqualTo(setupCver.size());
+        assertThat(kandidatnumre(actualCver)).containsExactlyInAnyOrderElementsOf(setupKandidatnumre);
     }
 
     @Test
     public void testFlereInputFritekstGirBredereResultat() {
-        Sokeresultat sokeresultat1 =
-                sokClient.veilederSok(SokekriterierVeiledere.med().fritekst("javautvikler").bygg());
-        Sokeresultat sokeresultat = sokClient.veilederSok(
-                SokekriterierVeiledere.med().fritekst("industrimekaniker javautvikler").bygg());
+        SokekriterierVeiledere smaltSøk = SokekriterierVeiledere.med().fritekst("javautvikler").bygg();
+        SokekriterierVeiledere bredtSøk = SokekriterierVeiledere.med().fritekst("industrimekaniker javautvikler").bygg();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver1 = sokeresultat1.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cverSmaltSøk = sokClient.veilederSok(smaltSøk).getCver();
+        List<EsCv> cverBredtSøk = sokClient.veilederSok(bredtSøk).getCver();
 
-        assertThat(cver1.size()).isLessThan(cver.size());
-        assertThat(cver1.size()).isEqualTo(1);
-        assertThat(cver.size()).isEqualTo(4);
+        assertThat(cverSmaltSøk).isNotEmpty();
+        assertThat(cverBredtSøk).isNotEmpty();
+        assertThat(cverSmaltSøk.size()).isLessThan(cverBredtSøk.size());
     }
 
     @Test
@@ -132,10 +144,10 @@ public class IndexCvIT {
         Sokeresultat sokeresultatFritekst =
                 sokClient.veilederSok(SokekriterierVeiledere.med().fritekst("og").bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverYrke = sokeresultatYrke.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverKomp = sokeresultatKomp.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverUtdanning = sokeresultatUtdanning.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverFritekst = sokeresultatFritekst.getCver();
+        List<EsCv> cverYrke = sokeresultatYrke.getCver();
+        List<EsCv> cverKomp = sokeresultatKomp.getCver();
+        List<EsCv> cverUtdanning = sokeresultatUtdanning.getCver();
+        List<EsCv> cverFritekst = sokeresultatFritekst.getCver();
 
         assertThat(cverYrke.size()).isEqualTo(0);
         assertThat(cverKomp.size()).isEqualTo(0);
@@ -146,13 +158,13 @@ public class IndexCvIT {
     @Test
     public void testSokMedFlereKriterierGirSvarMedAlleFelter() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().stillingstitler(Collections.singletonList("Butikkmedarbeider"))
-                        .kompetanser(Collections.singletonList("Hallovert"))
-                        .utdanninger(Collections.singletonList("Bygg og anlegg")).bygg());
+                .kompetanser(Collections.singletonList("Hallovert"))
+                .utdanninger(Collections.singletonList("Bygg og anlegg")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
 
         assertThat(cver.size()).isEqualTo(1);
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        EsCv cv = cver.get(0);
         assertThat(cv)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv4()));
     }
@@ -163,8 +175,8 @@ public class IndexCvIT {
                 .stillingstitler(Collections.singletonList("Industrimekaniker")).bygg());
         Sokeresultat sokeresultat2 = sokClient.veilederSok(SokekriterierVeiledere.med().stillingstitler(asList("Butikkmedarbeider", "Industrimekaniker")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver2 = sokeresultat2.getCver();
 
         assertThat(cver2.size()).isGreaterThan(cver.size());
     }
@@ -176,8 +188,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultat2 = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .kompetanser(asList("Programvareutvikler", "Nyhetsanker")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver2 = sokeresultat2.getCver();
 
         assertThat(cver2.size()).isGreaterThan(cver.size());
     }
@@ -191,9 +203,9 @@ public class IndexCvIT {
         Sokeresultat sokeresultat3 = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .kompetanser(Collections.singletonList("arbeid generelt mekanisk")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver3 = sokeresultat3.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver2 = sokeresultat2.getCver();
+        List<EsCv> cver3 = sokeresultat3.getCver();
 
         assertThat(cver).isNotEmpty();
         assertThat(cver.size()).isEqualTo(cver2.size());
@@ -205,7 +217,7 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .kompetanser(Collections.singletonList("kranførerarbeid landtransport")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
 
         assertThat(cver).isEmpty();
     }
@@ -217,8 +229,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultat2 = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .utdanninger(asList("Bygg og anlegg", "master i sikkerhet")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver2 = sokeresultat2.getCver();
 
         assertThat(cver.size()).isGreaterThan(cver2.size());
     }
@@ -228,7 +240,7 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .forerkort(Collections.singletonList("B - Personbil"))
                 .bygg());
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         Set<String> forerkort = new HashSet<>();
         cver.forEach(cv -> cv.getForerkort().forEach(f -> forerkort.add(f.getForerkortKodeKlasse())));
 
@@ -248,7 +260,7 @@ public class IndexCvIT {
     public void testForerkortTraktorIkkeInkludertIAndreForerkort() {
         Sokeresultat sokeresultatForerkort = sokClient.veilederSok(SokekriterierVeiledere.med().forerkort(Collections.singletonList("T - Traktor")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultatForerkort.getCver();
+        List<EsCv> cver = sokeresultatForerkort.getCver();
         assertThat(cver)
                 .doesNotContain(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv5()));
 
@@ -261,7 +273,7 @@ public class IndexCvIT {
     public void testForerkortSnoscooterIkkeInkludertIAndreForerkort() {
         Sokeresultat sokeresultatForerkort = sokClient.veilederSok(SokekriterierVeiledere.med().forerkort(Collections.singletonList("S - Snøscooter")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultatForerkort.getCver();
+        List<EsCv> cver = sokeresultatForerkort.getCver();
         assertThat(cver)
                 .doesNotContain(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv5()));
 
@@ -275,8 +287,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().stillingstitler(Collections.singletonList("Progger")).bygg());
         Sokeresultat sokeresultatStemOrd = sokClient.veilederSok(SokekriterierVeiledere.med().stillingstitler(Collections.singletonList("Progg")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverStemOrd = sokeresultatStemOrd.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cverStemOrd = sokeresultatStemOrd.getCver();
 
         assertThat(cver.size()).isEqualTo(cverStemOrd.size());
         assertThat(cver.get(0)).isEqualTo(cverStemOrd.get(0));
@@ -286,7 +298,7 @@ public class IndexCvIT {
     public void testSamletKompetanseSkalIkkeGiResultatVedSokPaSprak() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().kompetanser(Collections.singletonList("Dansk")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isEqualTo(0);
     }
 
@@ -294,8 +306,8 @@ public class IndexCvIT {
     public void testSokPaSprak() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().sprak(Collections.singletonList("Dansk")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        List<EsCv> cver = sokeresultat.getCver();
+        EsCv cv = cver.get(0);
 
         assertThat(cver.size()).isEqualTo(1);
         assertThat(cv)
@@ -307,8 +319,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .kompetanser(Collections.singletonList("Truckførerbevis")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        List<EsCv> cver = sokeresultat.getCver();
+        EsCv cv = cver.get(0);
 
         assertThat(cver.size()).isEqualTo(1);
         assertThat(cv)
@@ -319,7 +331,7 @@ public class IndexCvIT {
     public void testSamletKompetanseSkalIkkeGiResultatVedSokPaForerkort() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().kompetanser(Collections.singletonList("T - Traktor")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
 
         assertThat(cver.size()).isEqualTo(0);
     }
@@ -329,8 +341,8 @@ public class IndexCvIT {
     public void testSamletKompetanseSkalGiResultatVedSokPaKurs() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().kompetanser(Collections.singletonList("Spring Boot")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        List<EsCv> cver = sokeresultat.getCver();
+        EsCv cv = cver.get(0);
 
         assertThat(cver.size()).isEqualTo(1);
         assertThat(cv)
@@ -341,8 +353,8 @@ public class IndexCvIT {
     public void testSamletKompetanseSkalGiResultatVedSokPaKompetanse() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().kompetanser(Collections.singletonList("Javautvikler")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        List<EsCv> cver = sokeresultat.getCver();
+        EsCv cv = cver.get(0);
 
         assertThat(cver.size()).isEqualTo(1);
         assertThat(cv)
@@ -354,8 +366,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().geografiList(Collections.singletonList("NO12.1201")).bygg());
         Sokeresultat sokeresultat2 = sokClient.veilederSok(SokekriterierVeiledere.med().geografiList(asList("NO12.1201", "NO11.1103")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver2 = sokeresultat2.getCver();
 
         assertThat(cver2.size()).isGreaterThan(cver.size());
     }
@@ -364,10 +376,10 @@ public class IndexCvIT {
     public void testSokPaBostedGirBegrensendeResultat() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().geografiList(Collections.singletonList("NO12.1201")).bygg());
         Sokeresultat sokeresultat2 = sokClient.veilederSok(SokekriterierVeiledere.med()
-                .geografiList(asList("NO12.1201")).maaBoInnenforGeografi(true).bygg());
+                .geografiList(List.of("NO12.1201")).maaBoInnenforGeografi(true).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver2 = sokeresultat2.getCver();
 
         assertThat(cver.size()).isGreaterThan(cver2.size());
     }
@@ -378,8 +390,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultat2 = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .geografiList(Collections.singletonList("NO02")).maaBoInnenforGeografi(true).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver2 = sokeresultat2.getCver();
 
         assertThat(cver.size()).isGreaterThan(cver2.size());
         assertThat(cver2.size()).isEqualTo(1);
@@ -390,10 +402,10 @@ public class IndexCvIT {
     public void testPaTotalYrkeserfaringSkalGiKorrektResultat() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().totalYrkeserfaring(Collections.singletonList("37-75")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isGreaterThan(0);
 
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        EsCv cv = cver.get(0);
         assertThat(cv)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
     }
@@ -403,8 +415,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().utdanningsniva(Collections.singletonList("Master")).bygg());
         Sokeresultat sokeresultat1 = sokClient.veilederSok(SokekriterierVeiledere.med().utdanningsniva(asList("Master", "Videregaende")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver1 = sokeresultat1.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver1 = sokeresultat1.getCver();
 
         assertThat(cver.size()).isLessThan(cver1.size());
     }
@@ -414,8 +426,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultatIngen = sokClient.veilederSok(SokekriterierVeiledere.med().utdanningsniva(Collections.singletonList("Ingen")).bygg());
         Sokeresultat sokeresultatIngenOgGrunnskole = sokClient.veilederSok(SokekriterierVeiledere.med().utdanningsniva(asList("Ingen", "Master")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverIngen = sokeresultatIngen.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverIngenOgGrunnskole = sokeresultatIngenOgGrunnskole.getCver();
+        List<EsCv> cverIngen = sokeresultatIngen.getCver();
+        List<EsCv> cverIngenOgGrunnskole = sokeresultatIngenOgGrunnskole.getCver();
 
         // assertThat(cverIngen).contains(kandidatsokTransformer
         // .transformer(transformer.transform(TempCvEventObjectMother.giveMeEsCv5())));
@@ -431,20 +443,20 @@ public class IndexCvIT {
         // 09568410230 giveMeEsCv4
         // 03050316895 giveMeEsCv5
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
 
         // 2 indekserte og synlige CV-er har geografi-ønsker i eksakt kommune eller hele Norge
         assertThat(cver.size()).isEqualTo(2);
-        assertThat(cver.contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv4())));
-        assertThat(cver.contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv5())));
+        assertTrue(cver.contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv4())));
+        assertTrue(cver.contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv5())));
     }
 
     @Test
     public void sokPaFylkeSkalGiTreffPaFylke() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().geografiList(Collections.singletonList("NO03")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<String> fnrList = cver.stream().map(no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv::getKandidatnr).collect(Collectors.toList());
+        List<EsCv> cver = sokeresultat.getCver();
+        List<String> fnrList = cver.stream().map(EsCv::getKandidatnr).collect(toList());
 
         assertThat(fnrList).contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv()).getKandidatnr());
     }
@@ -453,8 +465,8 @@ public class IndexCvIT {
     public void sokPaFylkeSkalGiTreffPaKommune() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().geografiList(Collections.singletonList("NO12")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<String> fnrList = cver.stream().map(no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv::getKandidatnr).collect(Collectors.toList());
+        List<EsCv> cver = sokeresultat.getCver();
+        List<String> fnrList = cver.stream().map(EsCv::getKandidatnr).collect(toList());
 
         assertThat(cver.size()).isGreaterThanOrEqualTo(3);
         assertThat(fnrList).contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv3()).getKandidatnr());
@@ -466,8 +478,8 @@ public class IndexCvIT {
     public void sokPaKommuneSkalGiTreffPaFylke() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().geografiList(Collections.singletonList("NO04.0403")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<String> fnrList = cver.stream().map(no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv::getKandidatnr).collect(Collectors.toList());
+        List<EsCv> cver = sokeresultat.getCver();
+        List<String> fnrList = cver.stream().map(EsCv::getKandidatnr).collect(toList());
 
         assertThat(fnrList).contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv()).getKandidatnr());
     }
@@ -476,8 +488,8 @@ public class IndexCvIT {
     public void sokPaKommuneSkalIkkeInkludereAndreKommuner() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().geografiList(Collections.singletonList("NO12.1201")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<String> fnrList = cver.stream().map(no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv::getKandidatnr).collect(Collectors.toList());
+        List<EsCv> cver = sokeresultat.getCver();
+        List<String> fnrList = cver.stream().map(EsCv::getKandidatnr).collect(toList());
 
         assertThat(fnrList).doesNotContain(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv5()).getKandidatnr());
         assertThat(fnrList).doesNotContain(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv6()).getKandidatnr());
@@ -486,7 +498,7 @@ public class IndexCvIT {
 
     @Test
     public void skalBulkIndeksereCVerIdempotent() {
-        List<EsCv> bulkEventer =
+        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv> bulkEventer =
                 asList(EsCvObjectMother.giveMeEsCv(), EsCvObjectMother.giveMeEsCv2(),
                         EsCvObjectMother.giveMeEsCv3(), EsCvObjectMother.giveMeEsCv4(),
                         EsCvObjectMother.giveMeEsCv5());
@@ -531,8 +543,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .yrkeJobbonsker(Collections.singletonList("Lastebilsjåfør")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        List<EsCv> cver = sokeresultat.getCver();
+        EsCv cv = cver.get(0);
         assertThat(cv)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv5()));
     }
@@ -544,8 +556,8 @@ public class IndexCvIT {
         Sokeresultat sokeresultat1 = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .yrkeJobbonsker(Arrays.asList("Butikkmedarbeider", "Ordfører")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver1 = sokeresultat1.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver1 = sokeresultat1.getCver();
         assertThat(cver.size()).isLessThan(cver1.size());
     }
 
@@ -567,11 +579,11 @@ public class IndexCvIT {
                 .yrkeJobbonsker(Arrays.asList("Butikkmedarbeider", "Industrimekaniker", "Ordfører"))
                 .bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv1 = cver.get(0);
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv2 = cver.get(1);
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv3 = cver.get(2);
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv4 = cver.get(3);
+        List<EsCv> cver = sokeresultat.getCver();
+        EsCv cv1 = cver.get(0);
+        EsCv cv2 = cver.get(1);
+        EsCv cv3 = cver.get(2);
+        EsCv cv4 = cver.get(3);
         assertThat(cv1)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv5()));
         assertThat(cv2)
@@ -593,9 +605,9 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .kompetanser(Collections.singletonList(typeaheadElement)).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isEqualTo(1);
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv1 = cver.get(0);
+        EsCv cv1 = cver.get(0);
         assertThat(cv1)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv3()));
     }
@@ -615,12 +627,12 @@ public class IndexCvIT {
 
         Sokeresultat resultat1 = sokClient.veilederHentKandidater(kandidatnummer1);
         List<String> resultatkandidatnummer1 = resultat1.getCver().stream()
-                .map(no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv::getKandidatnr).collect(Collectors.toList());
+                .map(EsCv::getKandidatnr).collect(toList());
         assertThat(resultatkandidatnummer1).isEqualTo(kandidatnummer1);
 
         Sokeresultat resultat2 = sokClient.veilederHentKandidater(kandidatnummer2);
         List<String> resultatkandidatnummer2 = resultat2.getCver().stream()
-                .map(no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv::getKandidatnr).collect(Collectors.toList());
+                .map(EsCv::getKandidatnr).collect(toList());
         assertThat(resultatkandidatnummer2).isEqualTo(kandidatnummer2);
     }
 
@@ -633,43 +645,50 @@ public class IndexCvIT {
 
         Sokeresultat resultat = sokClient.veilederHentKandidater(kandidatnummer);
         List<String> resultatkandidatnummer = resultat.getCver().stream()
-                .map(no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv::getKandidatnr).collect(Collectors.toList());
+                .map(EsCv::getKandidatnr).collect(toList());
         assertThat(resultatkandidatnummer).isEqualTo(asList(KANDIDATNUMMER1, KANDIDATNUMMER2));
     }
 
     @Test
     public void sokMedIngenUtdanningSkalGiFlerResultaterSelvOmManSpesifisererUtdanning() {
         Sokeresultat sokeresultatVideregaende = sokClient.veilederSok(SokekriterierVeiledere.med().utdanningsniva(Collections.singletonList("Videregaende"))
-                        .utdanninger(Collections.singletonList("Bygg og anlegg")).bygg());
+                .utdanninger(Collections.singletonList("Bygg og anlegg")).bygg());
 
         Sokeresultat sokeresultatVideregaendeOgIngenUtdanning = sokClient
                 .veilederSok(SokekriterierVeiledere.med().utdanningsniva(asList("Ingen", "Videregaende"))
                         .utdanninger(Collections.singletonList("Bygg og anlegg")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverVideregaende = sokeresultatVideregaende.getCver();
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverVideregaendeOgIngenUtdanning =
+        List<EsCv> cverVideregaende = sokeresultatVideregaende.getCver();
+        List<EsCv> cverVideregaendeOgIngenUtdanning =
                 sokeresultatVideregaendeOgIngenUtdanning.getCver();
         assertThat(cverVideregaende.size()).isLessThan(cverVideregaendeOgIngenUtdanning.size());
     }
 
     @Test
     public void sokMedDoktorgradSkalIkkeGiResulatMedKandidaterUtenDoktorgrad() {
-        Sokeresultat sokeresultatDoktorgrad = sokClient.veilederSok(SokekriterierVeiledere.med().utdanningsniva(Collections.singletonList("Doktorgrad")).bygg());
+        SokekriterierVeiledere søkekriterier = SokekriterierVeiledere.med().utdanningsniva(Collections.singletonList("Doktorgrad")).bygg();
 
-        assertThat(sokeresultatDoktorgrad.getCver()).hasSize(1);
+        List<EsCv> cver = sokClient.veilederSok(søkekriterier).getCver();
+
+        assertThat(cver).isNotEmpty();
+        cver.forEach(cv -> {
+            // Hvordan vet vi om en utdanning er en doktorgrad?
+            // Se metoden addUtdanningsnivaQuery i filen src/main/java/no/nav/arbeidsgiver/kandidatsok/es/client/EsSokHttpService.java
+            assertThat(cv.getUtdanning()).anyMatch(u -> u.getNusKode().startsWith("8"));
+        });
     }
 
     @Test
     public void sokMedFraTilSkalReturnereRiktigAntallKandidater() {
-        Sokeresultat sokeresultat =
-                sokClient.veilederSok(SokekriterierVeiledere.med().antallResultater(1).bygg());
-        assertThat(sokeresultat.getCver()).hasSize(1);
+        SokekriterierVeiledere antall1 = SokekriterierVeiledere.med().antallResultater(1).bygg();
+        List<EsCv> cver = sokClient.veilederSok(antall1).getCver();
+        assertThat(cver).hasSize(1);
 
-        // fra og med tredje posisjon
-        // av totalt 6 i indexen
-        Sokeresultat sokeresultat2 = sokClient
-                .veilederSok(SokekriterierVeiledere.med().fraIndex(2).antallResultater(5).bygg());
-        assertThat(sokeresultat2.getCver()).hasSize(4);
+        final int fraIndex = 2;
+        assertThat(setupCver.size()).isGreaterThan(fraIndex);
+        SokekriterierVeiledere flereEnnDetSomErIIndeksen = SokekriterierVeiledere.med().fraIndex(fraIndex).antallResultater(8888).bygg();
+        cver = sokClient.veilederSok(flereEnnDetSomErIIndeksen).getCver();
+        assertThat(cver).hasSize(setupCver.size() - fraIndex);
     }
 
     @Test
@@ -681,13 +700,13 @@ public class IndexCvIT {
                 .yrkeJobbonsker(Collections.singletonList("Konsulent (bank)")).bygg());
 
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverKonsulentData = sokeresultatKonsulentData.getCver();
+        List<EsCv> cverKonsulentData = sokeresultatKonsulentData.getCver();
         assertThat(cverKonsulentData.size()).isEqualTo(1);
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cverKonsulentBank = sokeresultatKonsulentBank.getCver();
+        List<EsCv> cverKonsulentBank = sokeresultatKonsulentBank.getCver();
         assertThat(cverKonsulentBank.size()).isEqualTo(1);
 
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv1Data = cverKonsulentData.get(0);
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv1Bank = cverKonsulentBank.get(0);
+        EsCv cv1Data = cverKonsulentData.get(0);
+        EsCv cv1Bank = cverKonsulentBank.get(0);
         assertThat(cv1Data)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv3()));
         assertThat(cv1Bank)
@@ -696,34 +715,41 @@ public class IndexCvIT {
 
     @Test
     public void sokPaKvalifiseringsgruppekodeSkalGiKorrektResultat() {
-        Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
-                .kvalifiseringsgruppeKoder(Collections.singletonList("IKVAL")).bygg());
+        final String kvalifiseringsgruppekode = "IKVAL";
+        SokekriterierVeiledere sokekriterier = SokekriterierVeiledere.med().kvalifiseringsgruppeKoder(List.of(kvalifiseringsgruppekode)).bygg();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        assertThat(cver).hasSize(1);
-        assertThat(cver).containsExactly(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
+        List<EsCv> cver = sokClient.veilederSok(sokekriterier).getCver();
+
+        assertThat(cver).isNotEmpty();
+        String msg = "Kvalifiseringsgruppekode skal være " + kvalifiseringsgruppekode;
+        assertThat(cver).allMatch(cv -> cv.getKvalifiseringsgruppekode().equals("IKVAL"), msg);
     }
 
     @Test
     public void sokPaToKvalifiseringsgruppekodeSkalIkkeInnsnevre() {
-        Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
-                .kvalifiseringsgruppeKoder(Arrays.asList("IKVAL", "IBATT")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        assertThat(cver).hasSize(1);
-        assertThat(cver).containsExactly(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
+        SokekriterierVeiledere søkekriterier = SokekriterierVeiledere.med().kvalifiseringsgruppeKoder(asList(ikval, ibatt)).bygg();
+
+        List<EsCv> cver = sokClient.veilederSok(søkekriterier).getCver();
+
+        assertThat(cver).isNotEmpty();
+        System.out.println("AAA " + kandidatnumre(cver));
+        assertThat(cver).allMatch(cv -> {
+            String kode = cv.getKvalifiseringsgruppekode();
+            return ikval.equals(kode) || ibatt.equals(kode);
+        });
     }
 
     @Test
     public void sokPaFnrSkalGiKorrektResultat() {
-        Optional<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> optional = sokClient.veilederSokPaaFnr("04265983651");
+        Optional<EsCv> optional = sokClient.veilederSokPaaFnr("04265983651");
         assertThat(optional).isPresent();
         assertThat(optional.get()).isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv3()));
     }
 
     @Test
     public void sokPaIkkeEksisterendeFnrSkalGiEmpty() {
-        Optional<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> optional = sokClient.veilederSokPaaFnr("04265983622");
+        Optional<EsCv> optional = sokClient.veilederSokPaaFnr("04265983622");
         assertThat(optional).isNotPresent();
     }
 
@@ -741,25 +767,19 @@ public class IndexCvIT {
 
     @Test
     public void veilederHentEnKandidat() {
-        Optional<EsCv> esCv = sokClient.veilederHent("2L");
+        Optional<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv> esCv = sokClient.veilederHent("2L");
         assertThat(esCv.get().getKandidatnr()).isEqualTo("2L");
     }
 
     @Test
-    public void veilederHentEnKandidatSomBareErSynligForAg() {
-        Optional<EsCv> esCv = sokClient.veilederHent("1L");
-        assertThat(esCv).isNotPresent();
-    }
-
-    @Test
     public void arbeidsgiverHentEnKandidat() {
-        Optional<EsCv> esCv = sokClient.veilederHent("1L");
+        Optional<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv> esCv = sokClient.veilederHent("1L");
         assertThat(esCv.get().getKandidatnr()).isEqualTo("1L");
     }
 
     @Test
     public void arbeidsgiverHentEnKandidatSomIkkeFinnes() {
-        Optional<EsCv> esCv = sokClient.veilederHent("finnes-ikke");
+        Optional<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.EsCv> esCv = sokClient.veilederHent("finnes-ikke");
         assertThat(esCv).isNotPresent();
     }
 
@@ -789,7 +809,7 @@ public class IndexCvIT {
     @Test
     public void sokPaaKandidaterSkalInneholdeMinimumEnMedSattOppstart() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().bygg());
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> collect = sokeresultat.getCver().stream().filter(esCv -> Objects.nonNull(esCv.getOppstartKode())).collect(Collectors.toList());
+        List<EsCv> collect = sokeresultat.getCver().stream().filter(esCv -> Objects.nonNull(esCv.getOppstartKode())).collect(toList());
         assertThat(collect).size().isGreaterThan(0);
     }
 
@@ -798,9 +818,9 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .yrkeJobbonsker(Collections.singletonList("Trailersjåffis")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isEqualTo(1);
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        EsCv cv = cver.get(0);
         assertThat(cv)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv5()));
 
@@ -811,9 +831,9 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .stillingstitler(Collections.singletonList("Javaguru")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isEqualTo(1);
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        EsCv cv = cver.get(0);
         assertThat(cv)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
 
@@ -824,9 +844,9 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .stillingstitler(Collections.singletonList("Javautvikler")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isEqualTo(1);
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        EsCv cv = cver.get(0);
         assertThat(cv)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
 
@@ -839,41 +859,60 @@ public class IndexCvIT {
                 )).isTrue();
     }
 
+    private static boolean harStillingstittelAnleggsmaskinfører(EsCv cv) {
+        return cv.getYrkeserfaring().stream().anyMatch(y -> anleggsmaskinfører.equals(y.getStillingstittel()));
+    }
+
+    private static Instant tildato(EsYrkeserfaring yrkeserfaring) {
+        Calendar c = Calendar.getInstance();
+        c.setTime(yrkeserfaring.getFraDato());
+        c.add(Calendar.MONTH, yrkeserfaring.getYrkeserfaringManeder());
+        return c.toInstant();
+    }
+
+    private static Instant minus(Instant instant, int antallÅr) {
+        Calendar c = Calendar.getInstance();
+        c.setTime(Date.from(instant));
+        c.add(Calendar.YEAR, -antallÅr);
+        return c.toInstant();
+    }
+
+    private static boolean yrkeserfaringAnleggsmaskinførerErNyereEnn10År(EsCv cv) {
+        return cv.getYrkeserfaring().stream().filter(y -> anleggsmaskinfører.equals(y.getStillingstittel())).anyMatch(y -> tildato(y).isAfter(minus(now(), 10)));
+    }
+
     @Test
     public void sokPaaStillingsTittelMedFilterPaaNyligeSkalGiTreff() {
-        Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
-                .stillingstitler(Collections.singletonList("Anleggsmaskinfører")).antallAarGammelYrkeserfaring(null).bygg());
+        final SokekriterierVeiledere.Builder builder = SokekriterierVeiledere.med().stillingstitler(List.of(anleggsmaskinfører));
+        final SokekriterierVeiledere sokAlle = builder.antallAarGammelYrkeserfaring(null).bygg();
+        final SokekriterierVeiledere sokGamle = builder.antallAarGammelYrkeserfaring(10).bygg();
+        final SokekriterierVeiledere sokNye = builder.antallAarGammelYrkeserfaring(5).bygg();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        assertThat(cver.size()).isEqualTo(2);
+        final List<EsCv> actualAlle = sokClient.veilederSok(sokAlle).getCver();
+        final List<EsCv> actualGamle = sokClient.veilederSok(sokGamle).getCver();
+        System.out.println("AAA actualGamle=" + kandidatnumre(actualGamle));
+        final List<EsCv> actualNye = sokClient.veilederSok(sokNye).getCver();
 
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder(
-                "11L", "6L");
+        assertThat(actualAlle).isNotEmpty();
+        assertThat(actualAlle).allMatch(IndexCvIT::harStillingstittelAnleggsmaskinfører);
 
-        Sokeresultat sokeresultat2 = sokClient.veilederSok(SokekriterierVeiledere.med()
-                .stillingstitler(Collections.singletonList("Anleggsmaskinfører")).antallAarGammelYrkeserfaring(10).bygg());
+        assertThat(actualGamle).isNotEmpty();
+        assertThat(actualGamle.size()).isLessThan(actualAlle.size());
+        assertThat(actualGamle).allMatch(IndexCvIT::harStillingstittelAnleggsmaskinfører);
+        String predicateDescription = "Yrkeserfaring med yrkestittel " + anleggsmaskinfører + " skal være ferskere enn 10 år gameml";
+        assertThat(actualGamle).allMatch(IndexCvIT::yrkeserfaringAnleggsmaskinførerErNyereEnn10År, predicateDescription);
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
-        assertThat(cver2.size()).isEqualTo(1);
-
-        assertThat(cver2).extracting(Extractors.byName("kandidatnr")).containsExactly(
-                "11L");
-
-        Sokeresultat sokeresultat3 = sokClient.veilederSok(SokekriterierVeiledere.med()
-                .stillingstitler(Collections.singletonList("Anleggsmaskinfører")).antallAarGammelYrkeserfaring(5).bygg());
-
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver3 = sokeresultat3.getCver();
-        assertThat(cver3.size()).isEqualTo(0);
+        assertThat(actualNye).isEmpty();
     }
 
     @Test
     public void sokMedSynonymerIKompetanseSkalGiTreff() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().kompetanser(Collections.singletonList("Java (8)")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isEqualTo(1);
 
-        no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv cv = cver.get(0);
+        EsCv cv = cver.get(0);
         assertThat(cv)
                 .isEqualTo(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
     }
@@ -918,7 +957,7 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .navkontor(Collections.singletonList("0316 NAV Gamle Oslo")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver).hasSize(1);
         assertThat(cver).containsExactly(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
     }
@@ -928,7 +967,7 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .navkontor(Arrays.asList("0316 NAV Gamle Oslo", "NAV Noe annet")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver).hasSize(1);
         assertThat(cver).containsExactly(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
     }
@@ -938,7 +977,7 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .antallAarFra(39).antallAarTil(40).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isGreaterThanOrEqualTo(1);
         assertThat(cver).contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
         assertThat(cver).doesNotContain(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv()));
@@ -949,7 +988,7 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .antallAarFra(39).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isGreaterThanOrEqualTo(1);
         assertThat(cver).contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
         assertThat(cver).doesNotContain(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv()));
@@ -960,7 +999,7 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .antallAarTil(40).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isGreaterThanOrEqualTo(1);
         assertThat(cver).contains(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
         assertThat(cver).doesNotContain(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv()));
@@ -971,7 +1010,7 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .antallAarFra(10).antallAarTil(38).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver).doesNotContain(kandidatsokTransformer.transformer(EsCvObjectMother.giveMeEsCv2()));
     }
 
@@ -983,7 +1022,7 @@ public class IndexCvIT {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med()
                 .kompetanser(Collections.singletonList(komp)).stillingstitler(Collections.singletonList("DENNEFINNESIKKE")).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver.size()).isEqualTo(0);
 
     }
@@ -992,7 +1031,7 @@ public class IndexCvIT {
     public void sokMedTilretteleggingsbehovSkalGiKorrektTreff() {
         Sokeresultat sokeresultat = sokClient.veilederSok(SokekriterierVeiledere.med().tilretteleggingsbehov(true).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
 
         assertThat(cver.size()).isEqualTo(3);
         assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder(
@@ -1003,10 +1042,10 @@ public class IndexCvIT {
     public void sokMedVeilTilretteleggingsbehovSkalGiKorrektTreff() {
         Sokeresultat sokeresultat =
                 sokClient.veilederSok(SokekriterierVeiledere
-                        .med().veilTilretteleggingsbehov(Collections.singletonList("Kat1_Kode"))
+                        .med().veilTilretteleggingsbehov(Collections.singletonList(Kat1_Kode))
                         .bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
 
         assertThat(cver.size()).isEqualTo(2);
         assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder(
@@ -1017,10 +1056,10 @@ public class IndexCvIT {
     public void sokMedKunEnRiktigVeilTilretteleggingsbehovSkalGiKorrektTreff() {
         Sokeresultat sokeresultat =
                 sokClient.veilederSok(SokekriterierVeiledere
-                        .med().veilTilretteleggingsbehov(Arrays.asList("Kat1_Kode", "Kat_Eksistererikke_Kode"))
+                        .med().veilTilretteleggingsbehov(Arrays.asList(Kat1_Kode, "Kat_Eksistererikke_Kode"))
                         .bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
 
         assertThat(cver.size()).isEqualTo(2);
         assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder(
@@ -1031,10 +1070,10 @@ public class IndexCvIT {
     public void sokMedVeilTilretteleggingsbehovOgPermittertSkalGiKorrektTreff() {
         Sokeresultat sokeresultat =
                 sokClient.veilederSok(SokekriterierVeiledere
-                        .med().veilTilretteleggingsbehov(Arrays.asList("Kat1_Kode", "Kat_Eksistererikke_Kode"))
+                        .med().veilTilretteleggingsbehov(Arrays.asList(Kat1_Kode, "Kat_Eksistererikke_Kode"))
                         .permittert(Boolean.TRUE).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
 
         assertThat(cver.size()).isEqualTo(1);
         assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder(
@@ -1043,54 +1082,60 @@ public class IndexCvIT {
 
     @Test
     public void sokMedVeilTilretteleggingsbehovUtelukketSkalGiKorrektTreff() {
-        Sokeresultat sokeresultat =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().veilTilretteleggingsbehovUtelukkes(Collections.singletonList("Kat1_Kode"))
-                        .bygg());
+        SokekriterierVeiledere sokekriterier = SokekriterierVeiledere
+                .med().veilTilretteleggingsbehovUtelukkes(List.of(Kat1_Kode))
+                .bygg();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-
-        assertThat(cver.size()).isEqualTo(4);
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).doesNotContain(
-                "4L", "5L");
+        List<EsCv> cver = sokClient.veilederSok(sokekriterier).getCver();
+        Map<String, List<String>> fraKandidatnrTilBehov = tilretteleggingsbehov(cver);
+        assertThat(cver.size()).isGreaterThan(0);
+        fraKandidatnrTilBehov.forEach((kandidatnr, behov) -> {
+            String msg = "Feil innhold i tilretteleggingsbehov for kandidatnr " + kandidatnr + ": " + behov;
+            assertFalse(behov.contains(Kat1_Kode), msg);
+        });
     }
 
     @Test
     public void sokMedKunEnRiktigVeilTilretteleggingsbehovUtelukketSkalGiKorrektTreff() {
-        Sokeresultat sokeresultat =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().veilTilretteleggingsbehovUtelukkes(Arrays.asList("Kat1_Kode", "Kat_Eksistererikke_Kode"))
-                        .bygg());
+        final String skalUtelukkes = Kat1_Kode;
+        final String utelukkesIkkeeksisterende = "Kat_Eksistererikke_Kode";
+        SokekriterierVeiledere sokekriterier = SokekriterierVeiledere.med().veilTilretteleggingsbehovUtelukkes(asList(skalUtelukkes, utelukkesIkkeeksisterende)).bygg();
+        assertThat(setupCver).anyMatch(cv -> cv.getVeilTilretteleggingsbehov().contains(skalUtelukkes));
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokClient.veilederSok(sokekriterier).getCver();
 
-        assertThat(cver.size()).isEqualTo(4);
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).doesNotContain(
-                "4L", "5L");
+        assertThat(cver).isNotEmpty();
+        assertThat(cver).allSatisfy(cv -> {
+            assertThat(cv.getVeilTilretteleggingsbehov()).doesNotContain(skalUtelukkes);
+            assertThat(cv.getVeilTilretteleggingsbehov()).doesNotContain(utelukkesIkkeeksisterende);
+        });
     }
 
     @Test
     public void sokMedVeilTilretteleggingsbehovUtelukketOgIkkePermittertSkalGiKorrektTreff() {
-        Sokeresultat sokeresultat =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().veilTilretteleggingsbehovUtelukkes(Arrays.asList("Kat1_Kode", "Kat_Eksistererikke_Kode"))
-                        .permittert(Boolean.FALSE).bygg());
+        SokekriterierVeiledere søkekriterier = SokekriterierVeiledere
+                .med().veilTilretteleggingsbehovUtelukkes(asList(Kat1_Kode, "Kat_Eksistererikke_Kode"))
+                .permittert(Boolean.FALSE).bygg();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokClient.veilederSok(søkekriterier).getCver();
 
-        assertThat(cver.size()).isEqualTo(3);
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).doesNotContain(
-                "3L", "4L", "5L");
+        assertThat(cver).isNotEmpty();
+        assertThat(cver).allSatisfy(cv -> {
+            List<String> behov = cv.getVeilTilretteleggingsbehov();
+            assertThat(behov).doesNotContain(Kat1_Kode);
+            assertThat(behov).doesNotContain("Kat_Eksistererikke_Kode");
+            assertThat(behov).doesNotContain("permittert");
+        });
     }
 
     @Test
     public void sokMedVeilTilretteleggingsbehovUtelukketOgPermittertSkalGiKorrektTreff() {
         Sokeresultat sokeresultat =
                 sokClient.veilederSok(SokekriterierVeiledere
-                        .med().veilTilretteleggingsbehovUtelukkes(Arrays.asList("Kat1_Kode", "Kat_Eksistererikke_Kode"))
+                        .med().veilTilretteleggingsbehovUtelukkes(Arrays.asList(Kat1_Kode, "Kat_Eksistererikke_Kode"))
                         .permittert(Boolean.TRUE).bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
 
         assertThat(cver.size()).isEqualTo(1);
         assertThat(cver).extracting(Extractors.byName("kandidatnr")).doesNotContain(
@@ -1100,52 +1145,50 @@ public class IndexCvIT {
     }
 
     @Test
-    public void sokMedSistEndretFilterSkalGiKorrektTreff() {
-        Sokeresultat sokeresultat =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().antallDagerSistEndret(7)
-                        .bygg());
+    public void sokMedSistEndretFilter7Dager() {
+        final int periodeAntallDager = 7;
+        SokekriterierVeiledere søkekriterier = SokekriterierVeiledere.med().antallDagerSistEndret(periodeAntallDager).bygg();
+        final List<String> expectedKandidatnumre = setupCver.stream().filter(cv -> cv.getTidsstempel().after(antallDagerTilbakeFraNow(periodeAntallDager + 1))).map(cv -> cv.getKandidatnr()).collect(toList());
+        assertThat(expectedKandidatnumre).isNotEmpty();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokClient.veilederSok(søkekriterier).getCver();
 
-        assertThat(cver.size()).isEqualTo(2);
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).contains(
-                "3L", "2L");
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).doesNotContain(
-                "6L", "11L");
-
-        Sokeresultat sokeresultat2 =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().antallDagerSistEndret(15)
-                        .bygg());
-
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
-
-        assertThat(cver2.size()).isEqualTo(6);
-        assertThat(cver2).extracting(Extractors.byName("kandidatnr")).contains(
-                "6L", "11L", "3L", "2L");
+        assertThat(kandidatnumre(cver)).containsExactlyInAnyOrderElementsOf(expectedKandidatnumre);
     }
 
     @Test
+    public void sokMedSistEndretFilter15Dager() {
+        final int periodeAntallDager = 15;
+        SokekriterierVeiledere søkekriterier = SokekriterierVeiledere.med().antallDagerSistEndret(periodeAntallDager).bygg();
+        final List<String> expectedKandidatnumre = setupCver.stream().filter(cv -> cv.getTidsstempel().after(antallDagerTilbakeFraNow(periodeAntallDager + 1))).map(cv -> cv.getKandidatnr()).collect(toList());
+        assertThat(expectedKandidatnumre).isNotEmpty();
+
+        List<EsCv> cver = sokClient.veilederSok(søkekriterier).getCver();
+
+        assertThat(kandidatnumre(cver)).containsExactlyInAnyOrderElementsOf(expectedKandidatnumre);
+    }
+
+
+    @Test
     public void sokMedTilgjengeligFilterSkalSkalGiKorrektTreff() {
-        Sokeresultat sokeresultat =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Collections.singletonList("tilgjengelig"))
-                        .bygg());
+        SokekriterierVeiledere søkekriterier = SokekriterierVeiledere.med().midlertidigUtilgjengelig(List.of(tilgjengelig)).bygg();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokClient.veilederSok(søkekriterier).getCver();
 
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder("2L", "6L", "11L");
+        assertThat(cver).isNotEmpty();
+        cver.forEach(cv -> {
+            assertThat(cv.getVeilTilretteleggingsbehov()).doesNotContain(midlertidigUtilgjengelig, tilgjengeligInnen1Uke);
+        });
     }
 
     @Test
     public void sokMedMidlertidigUtilgjengeligEnUkeSkalGiKorrektTreff() {
         Sokeresultat sokeresultat =
                 sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Collections.singletonList("tilgjengeliginnen1uke"))
+                        .med().midlertidigUtilgjengelig(Collections.singletonList(tilgjengeligInnen1Uke))
                         .bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactly("4L");
     }
 
@@ -1153,74 +1196,80 @@ public class IndexCvIT {
     public void sokMedMidlertidigUtilgjengeligSkalGiKorrektTreff() {
         Sokeresultat sokeresultat =
                 sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Collections.singletonList("midlertidigutilgjengelig"))
+                        .med().midlertidigUtilgjengelig(Collections.singletonList(midlertidigUtilgjengelig))
                         .bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder("3L", "5L");
     }
 
     @Test
     public void sokMedIngenEllerAlleMidlertidigTilgjengeligFilterSkalGiAlleKandidater() {
-        Sokeresultat sokeresultat =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Collections.emptyList())
-                        .bygg());
+        SokekriterierVeiledere ingen = SokekriterierVeiledere.med().midlertidigUtilgjengelig(emptyList()).bygg();
+        SokekriterierVeiledere alle = SokekriterierVeiledere.med().midlertidigUtilgjengelig(asList(tilgjengelig, midlertidigUtilgjengelig, tilgjengeligInnen1Uke)).bygg();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder("2L", "6L", "11L", "4L", "5L", "3L");
+        List<EsCv> cver = sokClient.veilederSok(ingen).getCver();
+        assertThat(cver.size()).isEqualTo(setupCver.size());
+        assertThat(setupKandidatnumre).containsExactlyInAnyOrderElementsOf(kandidatnumre(cver));
 
-        Sokeresultat sokeresultat2 =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Arrays.asList("tilgjengelig", "midlertidigutilgjengelig", "tilgjengeliginnen1uke"))
-                        .bygg());
+        cver = sokClient.veilederSok(alle).getCver();
+        assertThat(cver.size()).isEqualTo(setupCver.size());
+        assertThat(setupKandidatnumre).containsExactlyInAnyOrderElementsOf(kandidatnumre(cver));
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver2 = sokeresultat2.getCver();
-        assertThat(cver2).containsExactlyInAnyOrderElementsOf(cver);
     }
 
     @Test
     public void sokMedMidlertidigUtilgjengeligOgMidlertidigUtilgjengeligEnUkeSkalGiKorrektTreff() {
         Sokeresultat sokeresultat =
                 sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Arrays.asList("midlertidigutilgjengelig", "tilgjengeliginnen1uke"))
+                        .med().midlertidigUtilgjengelig(Arrays.asList(midlertidigUtilgjengelig, tilgjengeligInnen1Uke))
                         .bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder("3L", "4L", "5L");
     }
 
     @Test
     public void sokMedMidlertidigUtilgjengeligOgTilgjengeligSkalGiKorrektTreff() {
-        Sokeresultat sokeresultat =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Arrays.asList("midlertidigutilgjengelig", "tilgjengelig"))
-                        .bygg());
+        SokekriterierVeiledere sokekriterier = SokekriterierVeiledere
+                .med().midlertidigUtilgjengelig(asList(tilgjengelig, midlertidigUtilgjengelig))
+                .bygg();
+        List<EsCv> cver = sokClient.veilederSok(sokekriterier).getCver();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder("2L", "3L", "11L", "6L", "5L");
+        assertThat(cver.size()).isGreaterThan(1);
+        Map<String, List<String>> fraKandidatnrTilBehov = tilretteleggingsbehov(cver);
+        fraKandidatnrTilBehov.forEach((kandidatnr, behov) -> {
+            String msg = "Feil innhold i tilretteleggingsbehov for kandidatnr " + kandidatnr + ": " + behov;
+            assertTrue(behov.isEmpty() || behov.contains(midlertidigUtilgjengelig), msg);
+            assertFalse(behov.contains(tilgjengeligInnen1Uke), msg);
+        });
     }
 
     @Test
     public void sokMedTilgjengeligOgTilgjengeligEnUkeSkalGiKorrektTreff() {
-        Sokeresultat sokeresultat =
-                sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Arrays.asList("tilgjengelig", "tilgjengeliginnen1uke"))
-                        .bygg());
+        SokekriterierVeiledere sokekriterier = SokekriterierVeiledere
+                .med().midlertidigUtilgjengelig(asList(tilgjengelig, tilgjengeligInnen1Uke))
+                .bygg();
+        List<EsCv> cver = sokClient.veilederSok(sokekriterier).getCver();
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
-        assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder("2L", "11L", "4L", "6L");
+        assertThat(cver.size()).isGreaterThan(1);
+        Map<String, List<String>> fraKandidatnrTilBehov = tilretteleggingsbehov(cver);
+        fraKandidatnrTilBehov.forEach((kandidatnr, behov) -> {
+            String msg = "Feil innhold i tilretteleggingsbehov for kandidatnr " + kandidatnr + ": " + behov;
+            assertTrue(behov.isEmpty() || behov.contains(tilgjengeligInnen1Uke), msg);
+            assertFalse(behov.contains(midlertidigUtilgjengelig));
+        });
     }
 
     @Test
     public void sokMedMidlertidigUtilgjengeligOgPermittertSkalGiKorrektTreff() {
         Sokeresultat sokeresultat =
                 sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Collections.singletonList("midlertidigutilgjengelig"))
+                        .med().midlertidigUtilgjengelig(Collections.singletonList(midlertidigUtilgjengelig))
                         .permittert(true)
                         .bygg());
 
-        List<no.nav.arbeidsgiver.kandidat.kandidatsok.es.domene.sok.EsCv> cver = sokeresultat.getCver();
+        List<EsCv> cver = sokeresultat.getCver();
         assertThat(cver).extracting(Extractors.byName("kandidatnr")).containsExactlyInAnyOrder("3L", "5L");
     }
 
@@ -1228,7 +1277,7 @@ public class IndexCvIT {
     public void veilederSokSkalReturnereTilretteleggingsbehov() {
         Sokeresultat sokeresultat =
                 sokClient.veilederSok(SokekriterierVeiledere
-                        .med().midlertidigUtilgjengelig(Collections.singletonList("tilgjengeliginnen1uke"))
+                        .med().midlertidigUtilgjengelig(Collections.singletonList(tilgjengeligInnen1Uke))
                         .bygg());
 
         List<String> tilretteleggingbehov = sokeresultat.getCver().get(0).getVeilTilretteleggingsbehov();
